<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="240dp"
        android:layout_height="145dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-28dp"
        android:layout_toStartOf="@+id/driver"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/uber"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="0dp" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="237dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="98dp"
        android:onClick="getStarted"
        android:text="@string/get_started" />

    <TextView
        android:id="@+id/rider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/switch2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="41dp"
        android:text="@string/rider"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Rider" />

    <TextView
        android:id="@+id/driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="35dp"
        android:text="@string/driver"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Driver" />

</android.widget.RelativeLayout>